# mcp-mem0-general

./: .gitignore  CLAUDE_DESKTOP_INSTALL.md  LICENSE  README.md  USAGE_GUIDE.md  app.py  main.py  manifest.json  mcp-config.sample.json  mem0-tool-enhancements.md  pyproject.toml
docs/: README.md  advanced-features.md  api-reference.md  configuration.md  getting-started.md  memory-types.md
docs/tutorials/: custom-categories.md
mem0_mcp_server/advanced/: features.py  selective.py
mem0_mcp_server/core/: client.py  logging.py  server.py
mem0_mcp_server/memory_types/: short_term.py  specialized.py
mem0_mcp_server/operations/: basic.py
scripts/: load_docs.py
src/mcp_mem0_general/: main.py
src/mcp_mem0_general/tests/: __init__.py  test_main.py
